trunk/NewArchive/01800f549773f8b5ea9fa48dcb95cb67-7063104e283ed82d51a6fde7370c6e59/output
+ g++-4.8 -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:4:31: error: cannot call constructor ‘std::array<int, 10ul>::array’ directly [-fpermissive]
     std::array<int,10>::array();
                               ^
main.cpp:4:31: error:   for a function-style cast, remove the redundant ‘::array’ [-fpermissive]
